--- a/gen/templates/gen/about.html
+++ b/gen/templates/gen/about.html
@@ -12,8 +12,8 @@
 
 <body>
     <div class="container text-center mt-5">
-        <h2>This is about page</h2>
-        <p>This is a password generator created by Vahid Niamadpour</p>
+        <h2>About This App</h2>
+        <p>This is a password generator created using Django by Vahid Niamadpour</p>
         <a href="{% url 'home' %}" class="btn btn-warning">Home</a>
     </div>
 </body>
