--- a/gen/templates/gen/home.html
+++ b/gen/templates/gen/home.html
@@ -19,9 +19,8 @@
             <option value="11" selected>11</option>
             <option value="12">12</option>
             <option value="13">13</option>
-            <option value="14">14</option>
         </select> Length<br>
-        <label> 
+        <label> <br>
         <input type="checkbox" name="uppercase"> Uppercase
         </label> <br>
         <label> 
