My first change

--- a/gen/templates/gen/about.html
+++ b/gen/templates/gen/about.html
@@ -10,9 +10,9 @@
     <title>Document</title>
 </head>
 
-<body>
+<body style="background-color:#404040; color:white;">
     <div class="container text-center mt-5">
-        <h2>This is about page</h2>
+        <h2>About</h2>
         <p>This is a password generator created by Vahid Niamadpour</p>
         <a href="{% url 'home' %}" class="btn btn-warning">Home</a>
     </div>
