--- a/gen/templates/gen/home.html
+++ b/gen/templates/gen/home.html
@@ -8,7 +8,7 @@
         integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <title>Document</title>
 </head>
-<body>
+<body style="background-color:#404040; color:white;">
     <div class="container text-center mt-5">
     <h1>Password Generator</h1>
     <form action="{% url 'password' %}">
