--- a/gen/templates/gen/about.html
+++ b/gen/templates/gen/about.html
@@ -10,10 +10,10 @@
     <title>Document</title>
 </head>
 
-<body style="background-color:#404040; color:white;">
-    <div class="container text-center mt-5">
+<body style="background-color:black; color:white; font-family: 'Padauk', sans-serif;">
+    <div class="container text-center mt-5 p-5 bg-dark rounded">
         <h2>About</h2>
-        <p>This is a password generator created by Vahid Niamadpour</p>
+        <p>This is a password generator created using Django by Vahid Niamadpour</p>
         <a href="{% url 'home' %}" class="btn btn-warning">Home</a>
     </div>
 </body>
