--- a/gen/templates/gen/home.html
+++ b/gen/templates/gen/home.html
@@ -6,11 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
         integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+        <link rel="preconnect" href="https://fonts.gstatic.com">
+        <link href="https://fonts.googleapis.com/css2?family=Padauk&display=swap" rel="stylesheet">
     <title>Document</title>
 </head>
-<body style="background-color:#404040; color:white;">
-    <div class="container text-center mt-5">
-    <h1>Password Generator</h1>
+<body style="background-color:black; color:white; font-family: 'Padauk', sans-serif;">
+    <div class="container text-center mt-5 p-5 bg-dark rounded">
+    <h1 style="font-weight: bold; color:#0069D9;">Password Generator</h1>
     <form action="{% url 'password' %}">
         <select name="length" id=""> 
             <option value="8">8</option>
@@ -31,7 +33,8 @@
         </label> <br>
         <input type="submit" value="Generate Password" class="btn btn-primary">
     </form>
-<a href="{% url 'about' %}">about</a>
+    <br>
+<a href="{% url 'about' %}" class="btn btn-warning">about</a>
 </div>
 </body>
 </html>
