--- a/gen/templates/gen/password.html
+++ b/gen/templates/gen/password.html
@@ -10,8 +10,8 @@
     <title>Document</title>
 </head>
 
-<body>
-    <div class="container text-center mt-5">
+<body style="background-color:black; color:white; font-family: 'Padauk', sans-serif;">
+    <div class="container text-center mt-5 p-5 bg-dark rounded">
         <h2> Password is </h2>
         <h1 class="alert alert-success">{{ password }}</h1>
         <a href="{% url 'home' %}" class="btn btn-warning">Home</a>
